test/spec_vectors/load/fail/module_26.wat
(module (memory 1) (func $load_f32 (f32.load (i32.const 0))))